# monglepick-recommend

./: pyproject.toml
app/model/: schema.py
app/service/: search_service.py
