[project]
name = "monglepick-recommend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiomysql>=0.3.2",
    "aioredis>=2.0.1",
    "fastapi>=0.135.1",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pymysql>=1.1.2",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
